[gd_scene load_steps=8 format=2]

[ext_resource path="res://data/Effects/Bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://data/Effects/BossBullet.gd" type="Script" id=2]
[ext_resource path="res://assets/Sounds/Explosion.wav" type="AudioStream" id=3]
[ext_resource path="res://data/Effects/Debris.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Sprites/bullet.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.013245, 0.503311 )
colors = PoolColorArray( 0.027451, 0.027451, 0.027451, 0, 0.421875, 0, 0, 1 )

[node name="BossBullet" instance=ExtResource( 1 )]
collision_mask = 17
script = ExtResource( 2 )
speed = 300
steer_force = 10.0

[node name="Sprite" parent="." index="0"]
self_modulate = Color( 0.803922, 0, 0, 1 )
scale = Vector2( 8, 8 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 2 )

[node name="Trail" parent="." index="2"]
width = 10.0
gradient = SubResource( 1 )
trailLength = 40

[node name="Timer" parent="." index="3"]
wait_time = 3.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource( 3 )
bus = "SoundFX"

[node name="CPUParticles2D" parent="." index="5" instance=ExtResource( 4 )]
[connection signal="area_entered" from="." to="." method="_on_BossBullet_area_entered"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
